활동알림, 키워드 알림 통합

--- a/src/main/resources/templates/activity/InquireActivityList.html
+++ b/src/main/resources/templates/activity/InquireActivityList.html
@@ -34,7 +34,7 @@
         <div class="col-9">
             <div class="card" th:if="${activityList.size() == 0}">
                 <div class="card-header">
-                    활동이 내역이 없습니다.
+                    활동 내역이 없습니다.
                 </div>
             </div>
 
