--- a/src/main/resources/templates/chat/InquireChatList.html
+++ b/src/main/resources/templates/chat/InquireChatList.html
@@ -32,7 +32,7 @@
             </div>
             <div class="card" th:if="${chatList.size() == 0}">
                 <div class="card-header">
-                    아직 채팅이 없어요. 사람들과 채팅을 주고 받아보세요
+                    아직 채팅이 없어요. 동네 이웃들과 채팅을 주고 받아보세요
                 </div>
             </div>
         </div>
