--- a/src/main/resources/templates/settings/UpdateProfileForm.html
+++ b/src/main/resources/templates/settings/UpdateProfileForm.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="input-form-background row">
         <div class="input-form mx-auto">
-            <h4 class="mb-3">회원정보 변경</h4>
+            <h4 class="mb-3">회원정보</h4>
             <form class="validation-form" novalidate th:action="@{/profile}" th:method="post" th:object="${profileForm}">
 
                 <div class="mb-5">
