--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,8 +11,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="물품을 검색해보세요." aria-label="Search">
+                <form action="/search" class="d-flex" role="search" method="get">
+                    <input class="form-control me-2" type="search" name="searchWord" placeholder="물품을 검색해보세요." aria-label="Search">
                     <button class="btn btn-link" type="submit">
                         <img src="https://img.icons8.com/ios-glyphs/32/000000/search--v1.png" alt="search"/>
                     </button>
@@ -128,15 +128,22 @@
 
                         $("#alarmList").append(
                             "<li>" +
-                                "<a href=\"" + activityAlarm.link + "\" class=\"dropdown-item list-group-item-action\" id=\"activityAlarm-" + activityAlarm.id + "\" onclick='alarmClick(this)'>" +
-                                    "<div style='float:left; display: inline-block; margin-right: 10px; margin-top: 10px;'>" +
-                                        clickYnTag +
-                                    "</div>" +
-                                    "<div style='display: inline-block'>" +
-                                        "<small class=\"text-muted\" style='white-space: normal'>" + "<span style='color:#0090F9'>" + activityAlarm.sender + "</span>" + "님이 " + activityAlarm.message + "</small>" +
-                                        "<small class=\"fromNow text-muted\" style='display: block'>" + activityAlarm.diffCreatedAt + "</small>" +
-                                    "</div>" +
-                                "</a>" +
+                                "<div style='float:left; display: inline-block; width: 90%'>" +
+                                    "<a href=\"" + activityAlarm.link + "\" class=\"dropdown-item list-group-item-action\" id=\"activityAlarm-" + activityAlarm.id + "\" onclick='alarmClick(this)'>" +
+                                        "<div style='float:left; display: inline-block; margin-right: 10px; margin-top: 10px;'>" +
+                                            clickYnTag +
+                                        "</div>" +
+                                        "<div style='display: inline-block; width: 100%'>" +
+                                            "<small class=\"text-muted\" style='white-space: normal'>" + "<span style='color:#0090F9'>" + activityAlarm.sender + "</span>" + "님이 " + activityAlarm.message + "</small>" +
+                                            "<small class=\"fromNow text-muted\" style='display: block'>" + activityAlarm.diffCreatedAt + "</small>" +
+                                        "</div>" +
+                                    "</a>" +
+                                "</div>" +
+                                "<div style='float: right; display: inline-block; margin-right: 20px;'>" +
+                                    "<button id='deleteActiveAlarmBtn' style='float:right; display: inline-block; margin-top: 12px; line-height: 10px; background-color:transparent; border: 0; outline: 0;' value=\"" + activityAlarm.id + "\">" +
+                                        "X" +
+                                    "</button>" +
+                                "</div>" +
                             "</li>" +
                             "<hr>"
                         )
@@ -240,6 +247,19 @@
                     });
                 }
             });
+        });
+
+
+        $(document).on('click', '#deleteActiveAlarmBtn', function () {
+            let activeAlarmTag = $(this).parent().parent();
+            $.ajax({
+                url: "/activityAlarmList/" + $(this).val() + "/delete.do",
+                type: "post",
+                sync: false,
+                success: function () {
+                    activeAlarmTag.remove();
+                }
+            })
         });
 
 
